Agora é possível selecionar que entidades e tipologias se pretende obter nas rotas GET /api/entidades e /api/tipologias respetivamente
